----------------------------------------------------------------------
 OmegaT 4.1.5 update 3
----------------------------------------------------------------------
  0 Enhancement
  1 Bug fix
  1 Localisation update
----------------------------------------------------------------------
4.1.5 update 3 vs 4.1.5 update 2

  Bug fixes:

  - Team projects: some Subversion network errors were not detected
as an offline condition

  Localisation Updates:

  - Russian localisation updated to 4.1.5 update 2 (UI)

----------------------------------------------------------------------
 OmegaT 4.1.5 update 2 (2018-09-19)
----------------------------------------------------------------------
  2 Enhancements
  2 Bug fixes
  1 Localisation update
----------------------------------------------------------------------
4.1.5 update 2 vs 4.1.5 update 1

  Other changes:

  - Show human readable error on version check failure

  - Allow to use two methods of authentication (username/password or
apiKey) for IBM Watson MT

  Bug fixes:

  - Team projects fail to open in offline mode
  https://sourceforge.net/p/omegat/bugs/849/

  - Incomplete mirroring in team projects
  https://sourceforge.net/p/omegat/bugs/920/

  Localisation Updates:

  - Sardinian localisation updated to 4.1.5 (UI)

----------------------------------------------------------------------
 OmegaT 4.1.5 update 1 (2018-08-06)
----------------------------------------------------------------------
  3 Enhancements
  4 Bug fixes
  0 Localisation update
----------------------------------------------------------------------
4.1.5 update 1 vs 4.1.5

  Implemented requests:

  - Extract Text Content script to export to UTF-8
  https://sourceforge.net/p/omegat/feature-requests/1393/

  Other changes:

  - Watson Language Translator: Neural translation is always on, it's
possible to enter a Model ID in the credential dialog. See
https://sourceforge.net/p/omegat/feature-requests/1389/
