@@ -2,7 +2,7 @@
  OmegaT 4.1.5 update 3
 ----------------------------------------------------------------------
   0 Enhancement
-  1 Bug fix
+  2 Bug fixes
   1 Localisation update
 ----------------------------------------------------------------------
 4.1.5 update 3 vs 4.1.5 update 2
@@ -11,6 +11,9 @@
 
   - Team projects: some Subversion network errors were not detected
 as an offline condition
+
+  - Console mode crashes with a valid project
+  https://sourceforge.net/p/omegat/bugs/926/
 
   Localisation Updates:
 
